(lang dune 2.8)
(name stzress)
(version 0.0.1)
(generate_opam_files true)
(source (uri git+https://github.com/igarnier/stzress))
(bug_reports http://github.com/igarnier/stzress)
(homepage http://github.com/igarnier/stzress)
(license MIT)
(authors "Ilias Garnier")
(maintainers "igarnier@protonmail.com")
(use_standard_c_and_cxx_flags true)
(package
 (name stzress)
 (synopsis "Adversarial generation for data-encoding")
 (description "Adversarial generation for data-encoding. The current implementation relies on Monte-Carlo tree search.")
 (depends
  (dune (>= 2.8))
  (prbnmcn (= 0.0.1))
  (data-encoding (= 0.3))))
